FEAT: created patient and saved in database
