# src/modules/patients/useCases/createPatient/create-patient.controller.ts
@@ -1,4 +1,7 @@
 import { Request, Response } from "express";
+import { z } from "zod";
+import { ValidationSchemaError } from "../../../../errors/validation-schema.error";
+import { validatorSchema } from "../../../../infra/shared/validator/zod";
 
 import { IUserRepository } from "../../../users/repositories/user.repository";
 import { IPatientRepository } from "../../repositories/patient.repository";
@@ -12,17 +15,34 @@ export class CreatePatientController {
   async handle(request: Request, response: Response) {
     const { body } = request;
 
+    const patientSchema = z.object({
+      name: z.string(),
+      username: z.string(),
+      password: z.string(),
+      email: z.string().email(),
+      document: z.string().min(5),
+    });
+
     const createPatientUseCase = new CreatePatientUseCase(
       this.userRepository,
       this.patientRepository
     );
 
     try {
+      validatorSchema(patientSchema, body);
+
       const result = await createPatientUseCase.execute(body);
 
       return response.status(201).json(result);
     } catch (error: any) {
-      return response.status(error.statusCode).json({ ERROR: error.message });
+      if (error instanceof ValidationSchemaError) {
+        return response.status(error.statusCode).json({
+          ERROR: error.erros,
+        });
+      }
+      return response
+        .status(error.statusCode || 500)
+        .json({ ERROR: error.message });
     }
   }
 }
